--- a/src/app/modules/main/create-todo-modal/create-todo-modal.component.scss
+++ b/src/app/modules/main/create-todo-modal/create-todo-modal.component.scss
@@ -28,22 +28,39 @@
 
     border-radius: 5px;
 
-    overflow: hidden;
-
     box-shadow: 0 0 3px rgba(0, 0, 0, .3);
 
     .card-header {
+      @include flex(row, center, center);
+
+      position: relative;
+
       width: 100%;
       height: 90px;
 
       background-color: #727cf5;
 
-      @include flex(row, center, center);
-
       h3 {
         margin: 0;
 
         color: #fafafa;
+      }
+
+      .close-btn {
+        position: absolute;
+
+        right: -16px;
+        top: -16px;
+
+        width: 32px;
+        height: 32px;
+
+        border: 1px solid #ffffff;
+        border-radius: 5px;
+
+        opacity: .5;
+
+        background-color: #e5edfe;
       }
     }
 
@@ -91,6 +108,8 @@
 
         .assigned-users {
           @include flex();
+
+          position: relative;
 
           width: 100%;
           height: 38px;
@@ -174,6 +193,123 @@
             height: 32px;
 
             border-radius: 4px;
+          }
+
+          .user-list {
+            position: absolute;
+
+            right: -240px;
+            top: -140px;
+
+            width: 180px;
+            height: 260px;
+
+            border-radius: 4px;
+            border: 1px solid #e7e7e7;
+
+            overflow: hidden;
+
+            background-color: #ffffff;
+
+            box-shadow: 0 0 3px rgba(0, 0, 0, .3);
+
+            .user-list-header {
+              @include flex(row, center, center);
+
+              width: 100%;
+              height: 45px;
+
+              background-color: #f7f7f7;
+
+              border-bottom: 1px solid #e7e7e7;
+
+              font-size: 14px;
+              font-weight: 500;
+              color: #6c757d;
+            }
+
+            .user-list-body {
+              margin: 0;
+
+              width: 100%;
+              height: calc(100% - 90px);
+
+              overflow-x: hidden;
+              overflow-y: auto;
+
+              &::-webkit-scrollbar {
+                width: 3px;
+              }
+
+              &::-webkit-scrollbar-track {
+                background: transparent;
+              }
+
+              &::-webkit-scrollbar-thumb {
+                background: #e7e7e7;
+              }
+
+              &::-webkit-scrollbar-thumb:hover {
+                background: #e7e7e7;
+              }
+
+              li {
+                @include flex();
+
+                padding-left: 8px;
+                padding-right: 8px;
+
+                margin: 0;
+
+                position: relative;
+
+                width: 100%;
+                height: 30px;
+
+                border-bottom: 1px solid #e7e7e7;
+
+                font-size: 14px;
+                color: #94a1a7;
+
+                cursor: pointer;
+
+                &:hover {
+                  background-color: #e7e7e7;
+
+                  color: #181818;
+                }
+
+                &.selected {
+                  background-color: #727cf5;
+                  color: #fff;
+                }
+              }
+            }
+
+            .user-list-footer {
+              @include flex(row, center, center);
+
+              width: 100%;
+              height: 45px;
+
+              background-color: #f7f7f7;
+
+              border-top: 1px solid #e7e7e7;
+
+              flex-shrink: 0;
+
+              button {
+                margin: 0;
+
+                width: 90px;
+                height: 30px;
+
+                background-color: #727cf5;
+
+                font-size: 14px;
+                color: #ffffff;
+              }
+            }
           }
         }
 
