--- a/src/app/modules/main/update-todo-modal/update-todo-modal.component.scss
+++ b/src/app/modules/main/update-todo-modal/update-todo-modal.component.scss
@@ -28,11 +28,11 @@
 
     border-radius: 5px;
 
-    overflow: hidden;
-
     box-shadow: 0 0 3px rgba(0, 0, 0, .3);
 
     .card-header {
+      position: relative;
+
       width: 100%;
       height: 90px;
 
@@ -44,6 +44,23 @@
         margin: 0;
 
         color: #fafafa;
+      }
+
+      .close-btn {
+        position: absolute;
+
+        right: -16px;
+        top: -16px;
+
+        width: 32px;
+        height: 32px;
+
+        border: 1px solid #ffffff;
+        border-radius: 5px;
+
+        opacity: .5;
+
+        background-color: #e5edfe;
       }
     }
 
