--- a/src/app/modules/main/create-todo-modal/create-todo-modal.component.scss
+++ b/src/app/modules/main/create-todo-modal/create-todo-modal.component.scss
@@ -58,9 +58,14 @@
         border: 1px solid #ffffff;
         border-radius: 5px;
 
-        opacity: .5;
+        background-color: rgba(220, 53, 69, 1);
 
-        background-color: #e5edfe;
+        svg {
+          width: 24px;
+          height: 24px;
+
+          color: #fff;
+        }
       }
     }
 
