--- a/src/app/modules/main/update-todo-modal/update-todo-modal.component.html
+++ b/src/app/modules/main/update-todo-modal/update-todo-modal.component.html
@@ -2,7 +2,11 @@
   <div class="todo-card">
     <div class="card-header">
       <h3>Update Todo</h3>
-      <button class="close-btn" (click)="onClose()"></button>
+      <button class="close-btn" (click)="onClose()">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+        </svg>
+      </button>
     </div>
     <div class="card-body">
       <form class="card-form" #f="ngForm" (ngSubmit)="f.form.valid && onSubmit(f)">
