--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -36,12 +36,21 @@
     cursor: pointer;
 
     .avatar {
+      @include flex(row, center, center);
+
       width: 36px;
       height: 36px;
 
       border-radius: 100%;
 
       background-color: #727cf5;
+
+      svg {
+        width: 24px;
+        height: 25px;
+
+        color: #fff;
+      }
     }
 
     .username {
@@ -59,6 +68,35 @@
 
         cursor: inherit;
         user-select: none;
+      }
+    }
+  }
+
+  .logout {
+    @include flex(row, center, center);
+
+    width: 70px;
+    height: 100%;
+
+    border-left: 1px solid #f1f3fa;
+    border-right: 1px solid #f1f3fa;
+
+    background-color: #fafbfd;
+
+    button {
+      @include flex(row, center, center);
+
+      padding-top: 1px;
+
+      width: 36px;
+      height: 36px;
+
+      border-radius: 4px;
+
+      background-color: rgba(220, 53, 69, .75);
+
+      svg {
+        color: #fff;
       }
     }
   }
